--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@glidejs/glide": "^3.7.1",
     "@hookform/resolvers": "^4.1.0",
+    "@react-three/fiber": "^8.17.14",
     "@tabler/icons-react": "^3.30.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -25,6 +26,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "tailwind-merge": "^3.0.1",
+    "three": "^0.173.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
